--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "jwt-decode": "^4.0.0",
     "next": "14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
